Create member and pfemium member classes in class folder

--- a/views/home.html
+++ b/views/home.html
@@ -57,6 +57,6 @@ File Name: home.html
 
 </div><!-- End Container for main content -->
 
-
+<include href="views/includes/bottomLinks.html" />
 </body>
 </html>
