--- a/views/interests.html
+++ b/views/interests.html
@@ -73,6 +73,6 @@ File Name: interests.html
 
 </div><!-- End Container for main content -->
 
-
+<include href="views/includes/bottomLinks.html" />
 </body>
 </html>
