--- a/views/personal_info.html
+++ b/views/personal_info.html
@@ -28,9 +28,9 @@ File Name: personal_info.html
                 <div class="col-8">
                     <div class="form-group">
                         <label for="fname" class="font-weight-bold">First Name</label>
-                        <input type="text" class="form-control" id="fname" name="fname" placeholder="John" value="{{ @fname }}">
-                        <check if="{{ isset(@errors['indoor']) }}">
-                            <span class="text-danger">{{ @errors['indoor'] }}</span>
+                        <input type="text" class="form-control" id="fname" name="fname" placeholder="Johns" value="{{ @fname }}">
+                        <check if="{{ isset(@errors['fname']) }}">
+                            <span class="text-danger">{{ @errors['fname'] }}</span>
                         </check>
                     </div>
                     <div class="form-group">
@@ -61,14 +61,28 @@ File Name: personal_info.html
                                 <label class="form-check-label" for="radioUserFemale">Female</label>
                             </div>
                         </div>
+                        <check if="{{ isset(@errors['gender']) }}">
+                            <span class="text-danger">{{ @errors['gender'] }}</span>
+                        </check>
                     </div>
 
                     <div class="form-group">
                         <label for="phone" class="font-weight-bold">Phone Number</label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="xxxxxxxxxx" value=" {{@phone}}">
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="xxxxxxxxxx" value="{{@phone}}">
                         <check if="{{ isset(@errors['phone']) }}">
                             <span class="text-danger">{{ @errors['phone'] }}</span>
                         </check>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="font-weight-bold">Premium Membership</label>
+                        <div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="premium" name="premium" value="y"
+                                <check if="{{ @premium == 'y' }}">checked="checked"</check>>
+                                <label class="form-check-label" for="premium">Sign me up for the premium account!</label>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -92,6 +106,6 @@ File Name: personal_info.html
 
 </div><!-- End Container for main content -->
 
-
+<include href="views/includes/bottomLinks.html" />
 </body>
 </html>
